fix: prevent life motion track from overlapping header

--- a/src/styles/features/life-motion/_track.scss
+++ b/src/styles/features/life-motion/_track.scss
@@ -1,5 +1,6 @@
 .life-motion__track {
   width: 118vw;
+  margin-left: calc(50% - 59vw);
 
   display: flex;
   flex-direction: column;
